Add legacy Java baseline for Bob Premium Package for Java demos
Rewrite the Inventory Hold Service as a deliberately dated enterprise
Java app on the demo/java-premium-legacy branch, so it can serve as a
target for the Premium Package for Java modernization workflows:

- JDK downgrade: Java 8 + Spring Boot 2.7.18, javax.* namespaces,
  java.util.Date/Calendar, hand-written getters/setters (no Lombok),
  field @Autowired, HttpURLConnection, nullable returns, war packaging
  with SpringBootServletInitializer, and a hand-rolled SQLiteDialect.
- CVE remediation: pin commons-text 1.9 (Text4Shell, reachable via
  StringSubstitutor in the audit path), jackson-databind 2.13.0,
  sqlite-jdbc 3.36.0.3, with a change-board "do not bump" comment.
- UI modernization: a server-rendered JSP "Agent Console" at /console
  (font tags + table layout) for browsing quotes/holds/audit events and
  releasing holds.
- Test generation: service still ships with no src/test; the
  count()+1 ID generator remains as a latent bug for generated tests.

Infra updated to match (Dockerfile, e2e/run-native.sh, start_locally.sh
now build/run the war). Verified: mvn package builds, REST lifecycle and
JSP console render correctly end to end. Demo runbook added under
demos/java-premium-modernization/.

Co-Authored-By: IBM Bob <236091442+ibm-bob@users.noreply.github.com>