@@ -2,58 +2,96 @@ package com.galaxium.holdservice.client;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
-import java.time.Duration;
+import java.io.BufferedReader;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.util.Map;
 
 @Component
-@RequiredArgsConstructor
-@Slf4j
 public class PythonBackendClient {
 
-    private final ObjectMapper objectMapper;
-    private final HttpClient httpClient = HttpClient.newBuilder()
-            .connectTimeout(Duration.ofSeconds(10))
-            .build();
+    private static final Logger log = LoggerFactory.getLogger(PythonBackendClient.class);
+
+    private static final int CONNECT_TIMEOUT_MILLIS = 10 * 1000;
+    private static final int READ_TIMEOUT_MILLIS = 30 * 1000;
+
+    @Autowired
+    private ObjectMapper objectMapper;
 
     @Value("${python.backend.url}")
     private String pythonBackendUrl;
 
     public BookingResponse createBookingFromHold(Map<String, Object> holdData) {
+        HttpURLConnection connection = null;
         try {
             String url = pythonBackendUrl + "/internal/bookings/from-hold";
             String requestBody = objectMapper.writeValueAsString(holdData);
 
-            log.info("Calling Python backend to create booking: {}", url);
+            log.info("Calling Python backend to create booking: " + url);
 
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(url))
-                    .header("Content-Type", "application/json")
-                    .POST(HttpRequest.BodyPublishers.ofString(requestBody))
-                    .timeout(Duration.ofSeconds(30))
-                    .build();
+            connection = (HttpURLConnection) new URL(url).openConnection();
+            connection.setRequestMethod("POST");
+            connection.setRequestProperty("Content-Type", "application/json");
+            connection.setConnectTimeout(CONNECT_TIMEOUT_MILLIS);
+            connection.setReadTimeout(READ_TIMEOUT_MILLIS);
+            connection.setDoOutput(true);
 
-            HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+            OutputStream out = connection.getOutputStream();
+            try {
+                out.write(requestBody.getBytes("UTF-8"));
+                out.flush();
+            } finally {
+                out.close();
+            }
 
-            if (response.statusCode() >= 200 && response.statusCode() < 300) {
-                BookingResponse bookingResponse = objectMapper.readValue(response.body(), BookingResponse.class);
-                log.info("Booking created successfully: {}", bookingResponse.getBookingId());
+            int statusCode = connection.getResponseCode();
+            String responseBody = readBody(statusCode >= 200 && statusCode < 300
+                    ? connection.getInputStream()
+                    : connection.getErrorStream());
+
+            if (statusCode >= 200 && statusCode < 300) {
+                BookingResponse bookingResponse = objectMapper.readValue(responseBody, BookingResponse.class);
+                log.info("Booking created successfully: " + bookingResponse.getBookingId());
                 return bookingResponse;
             } else {
-                log.error("Failed to create booking. Status: {}, Body: {}", response.statusCode(), response.body());
-                throw new BookingCreationException("Failed to create booking: " + response.body());
+                log.error("Failed to create booking. Status: " + statusCode + ", Body: " + responseBody);
+                throw new BookingCreationException("Failed to create booking: " + responseBody);
             }
+        } catch (BookingCreationException e) {
+            throw e;
         } catch (Exception e) {
             log.error("Error calling Python backend", e);
             throw new BookingCreationException("Error calling Python backend: " + e.getMessage(), e);
+        } finally {
+            if (connection != null) {
+                connection.disconnect();
+            }
+        }
+    }
+
+    private String readBody(InputStream stream) throws Exception {
+        if (stream == null) {
+            return "";
+        }
+        BufferedReader reader = new BufferedReader(new InputStreamReader(stream, "UTF-8"));
+        try {
+            StringBuilder sb = new StringBuilder();
+            String line;
+            while ((line = reader.readLine()) != null) {
+                sb.append(line);
+            }
+            return sb.toString();
+        } finally {
+            reader.close();
         }
     }
 
